# CapstoneRPi

./: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  Comms.cpp  Comms.h  FSM.cpp  FSM.h  ImageState.cpp  ImageState.h  PieceRecognition.cpp  PieceRecognition.h  bot.cpp  bot.h  botmain.cpp  commMain.cpp  defs.h  main.cpp
